test/types/records/ferguson/default-compare-mixed-insn.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:16: error: unresolved call '==(R(int(64)), R(int(32)))'
$CHPL_HOME/modules/internal/ChapelBase.chpl:116: note: this candidate did not match: ==(a: bool, b: bool)
